# hornetq

./: .classpath  .cvsignore  .gitignore  .project  JBossORG-EULA.txt  NOTICE  README  README.md  RELEASING.md  build-hornetq.properties  build-hornetq.xml  build-maven.xml  build-messaging.xml  build-thirdparty.xml  build.bat  build.sh  build.xml  catalog-info.yml  change-versions.sh  component-info.xml  hornetq.ipr  hornetq.iws  jbossbuild.xml  mac-build.sh  merges.txt  messaging.ipr  messaging.iws  pom.xml  quorum.patch  release.properties  remove-twitter.patch  runperf.bat  runperf.sh  runslave.bat  runslave.sh  todos
AS/: build.xml  ra.xml
HornetQ_2_2_13_AS7_Final_Pending/: hornetq.iws
HornetQ_2_2_8_EAP_GA/: .classpath  build-hornetq.properties  build-thirdparty.xml  hornetq.iws  merges.txt  pom.xml
HornetQ_2_2_8_EAP_GA/native/: configure.ac
HornetQ_2_2_8_EAP_GA/native/src/: AsyncFile.cpp  JNI_AsynchronousFileImpl.cpp  Version.h
Software Architecture TUDelft/: ArchitecturalReflection.md  CodeDuplication.md  ConcurrencyView.md  ContextView.md  ExtractedDesignPatterns.md  FunctionalView.md  HornetQModules.md  How maintainable is the HornetQ codebase.md  InformationView.md  Main.md  Metrics.md  OperationalView.md  PerformancePerspective.md  SecurityPerspective.md  TestingCoverage.md  inFusionAnalysis.md  sketches.md  stakeholders.md
distribution/: pom.xml
docs/: JBossMQConfiguration.sxd  JBossMessagingClientSide.sxd  JBossMessagingConsumer.sxd  JBossMessagingCore.txt  JBossMessagingCoreGraphics.sxd  JBossMessagingJMSFacade-MessageConsumer.sxd  JBossMessagingJMSFacade.sxd  JBossMessagingJMSFacade2.sxd  README.html  pom.xml  standard_image.odg
dotnet/: JBMClientSolution.sln  JSMClient.vsmdi  LocalTestRun.testrunconfig  README.txt
etc/: checkstyle.xml  findbugs-exclude.xml  org.eclipse.jdt.core.prefs  org.eclipse.jdt.ui.prefs  schemaToTable.xsl
examples/: README.md  build.properties  build.xml  pom.xml
examples-eap/: readme
hornetq-bootstrap/: pom.xml  pom.xml.releaseBackup
hornetq-commons/: pom.xml
hornetq-core/: pom.xml
hornetq-core-client/: pom.xml
hornetq-dto/: pom.xml
hornetq-jakarta-client/: pom.xml
hornetq-jboss-as-integration/: pom.xml
hornetq-jms/: pom.xml
hornetq-jms-cdi/: pom.xml
hornetq-jms-client/: pom.xml
hornetq-jms-server/: pom.xml
hornetq-journal/: pom.xml
hornetq-logging/: pom.xml
hornetq-native/: .cdtproject  JBMNative.kdevelop.pcs  JBMNative.kdevses  README  bootstrap  cleanup-native  compile-native.sh  disktest-ia64  disktest32  generate-javah.sh  perf-disk  pom.xml  pom.xml.releaseBackup
hornetq-protocols/: pom.xml
hornetq-ra/: pom.xml
hornetq-rest/: pom.xml
hornetq-selector/: pom.xml
hornetq-server/: pom.xml
hornetq-service-sar/: pom.xml
hornetq-spring-integration/: pom.xml
hornetq-tools/: pom.xml
hornetq-twitter-integration/: pom.xml
jms-to-rest/: pom.xml
lib/: README.txt
licenses/: base64.txt  json.txt
native/: .project  JBMNative.kdevelop  README  bootstrap  cleanup-native  configure.ac  disktest32  disktest64  generate-javah.sh
native/src/: AIOController.cpp  AIOController.h  AIOException.h  AsyncFile.cpp  AsyncFile.h  CallbackAdapter.h  JAIODatatypes.h  JNICallbackAdapter.cpp  JNICallbackAdapter.h  JNI_AsynchronousFileImpl.cpp  JavaUtilities.cpp  JavaUtilities.h  LibAIOController.cpp  LockClass.h  Makefile.am  Version.h  disktest.cpp  org_jboss_messaging_core_asyncio_impl_AsynchronousFileImpl.h  org_jboss_messaging_core_asyncio_impl_JlibAIO.h  org_jboss_messaging_core_persistence_impl_libaio_jni_impl_JlibAIO.h
perf/: build.xml  perf.xml  (+2 more)
(+13590 files in other folders)
