#AM_CXXFLAGS = $(JVM_CXXFLAGS)
lib_LTLIBRARIES = libJLibAIO.la

libJLibAIO_la_SOURCES = AIOController.cpp AIOController.h AIOException.h AsyncFile.cpp \
                     AsyncFile.h CallbackAdapter.h JAIODatatypes.h JavaUtilities.cpp \
                     JavaUtilities.h JNICallbackAdapter.cpp JNICallbackAdapter.h LibAIOController.cpp \
                     LockClass.h org_jboss_messaging_core_persistence_impl_libaio_jni_impl_JlibAIO
